PLANET-5221 Support tests on fork PRs
* Remove org-global
* Remove gcloud activation
* `make ci` instead of `make` to avoid image push
* tmp contrib branch that exists on main repo, because composer only
allows branches that exist there.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,8 @@ workflows:
     jobs:
       - php72-tests
       - php73-tests
-      - acceptance-tests:
-          context: org-global
-      - a11y-tests:
-          context: org-global
+      - acceptance-tests
+      - a11y-tests
       - create-release-zip:
           context: org-global
           filters:
@@ -76,6 +74,7 @@ job-references:
         auth: &docker_auth
     working_directory: /home/circleci/
     environment:
+      WP_VERSION: 5.4.2
       APP_HOSTNAME: www.planet4.test
       APP_HOSTPATH:
       CLOUDSQL_INSTANCE: p4-develop-k8s
@@ -91,10 +90,11 @@ commands:
     steps:
       - setup_remote_docker:
           docker_layer_caching: true
+      - checkout:
+          path: /home/circleci/checkout/planet4-plugin-gutenberg-blocks
       - run:
           name: Build - Configure
           command: |
-            activate-gcloud-account.sh
             mkdir -p /tmp/workspace/var
             mkdir -p /tmp/workspace/src
             echo "${CIRCLE_BUILD_NUM}" > /tmp/workspace/var/circle-build-num
@@ -102,13 +102,19 @@ commands:
           name: Build - Build containers
           working_directory: /home/circleci
           command: |
-            echo "Plugin gutenberg blocks branch is ${CIRCLE_BRANCH}"
-            sleep 10
-            PLUGIN_GUTENBERG_BLOCKS_BRANCH=dev-${CIRCLE_BRANCH} \
+            if [ -n "$CIRCLE_PR_NUMBER" ]; then
+              BRANCH=contrib
+              git --git-dir=/home/circleci/checkout/planet4-plugin-gutenberg-blocks/.git checkout -b contrib
+              echo "Using tmp branch contrib for fork PR $CIRCLE_PR_NUMBER"
+            else
+              BRANCH="${CIRCLE_BRANCH}"
+              echo "Plugin gutenberg blocks branch is ${CIRCLE_BRANCH}"
+            fi
+            PLUGIN_GUTENBERG_BLOCKS_BRANCH=dev-${BRANCH}#${CIRCLE_SHA1} \
             MASTER_THEME_BRANCH=dev-master \
             MERGE_SOURCE=git@github.com:greenpeace/planet4-base-fork.git \
             MERGE_REF=develop \
-            make
+            make ci
       - run:
           name: Test - Clone planet4-docker-compose
           command: |
