Add Timber library for unit tests

--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
     "wp-coding-standards/wpcs": "^2.2.0",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
     "stevegrunwell/phpunit-markup-assertions": "^1.2",
-    "phpunit/phpunit": "^6.2"
+    "phpunit/phpunit": "^6.2",
+    "wpackagist-plugin/timber-library": "1.16.0"
   },
   "scripts": {
     "fixes": "vendor/bin/phpcbf",
