--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,19 +245,6 @@ jobs:
           name: "Call webhook to get free instance (mock for now). If an instance is already on the branch, use that one."
           command: |
             echo pandora > /tmp/workspace/test-instance
-      - run:
-          name: "Clone test instance repo"
-          command: |
-            repo=planet4-test-$(cat /tmp/workspace/test-instance)
-            git clone "https://github.com/greenpeace/$repo"
-      - run:
-          name: "Github auth"
-          command: |
-            git config --global user.email "circleci-bot@greenpeace.org"
-            git config --global user.name ":robot: CI Bot"
-            git config --global push.default simple
-            git config --global url."ssh://git@github.com".insteadOf "https://github.com" || true
-            mkdir -p ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
       - run: activate-gcloud-account.sh
       - run:
           name: "Put zip in cloud storage"
@@ -268,28 +255,7 @@ jobs:
             gsutil stat -q "$gs_path" || gsutil cp "/tmp/workspace/$filename" "$gs_path"
       - run:
           name: "Commit to test instance repo"
-          command: |
-            repo=planet4-test-$(cat /tmp/workspace/test-instance)
-            f="$repo/composer-local.json"
-            tmp=$(mktemp)
-            jq ".require.\"greenpeace/planet4-master-theme\" = \"7\"" "$f" >"$tmp"
-            mv "$tmp" "$f"
-            zip_url="https://storage.googleapis.com/$(cat /tmp/workspace/zip-path)"
-            composer_json=$(cat /tmp/workspace/composer.json |
-              jq '{name,type,autoload,extra}' |
-              jq '.version = 7' |
-              jq ".dist = {type: \"zip\", url: \"$zip_url\"}")
-            echo $composer_json | jq
-            package_repo="{type: \"package\", package: $composer_json}"
-            jq --tab ".repositories = [$package_repo]" "$f" >"$tmp"
-            mv "$tmp" "$f"
-            git -C $repo --no-pager diff
-            git -C $repo add composer-local.json
-            git -C $repo commit --allow-empty \
-              -m "Test $CIRCLE_PROJECT_REPONAME at branch $CIRCLE_BRANCH, commiti $CIRCLE_SHA1" \
-              -m "/unhold $CIRCLE_WORKFLOW_ID"
-            git -C $repo push
-
+          command: /home/circleci/trigger_test_instance.sh planet4-master-theme
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
