--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -244,7 +244,7 @@ jobs:
       - run:
           name: "Call webhook to get free instance (mock for now). If an instance is already on the branch, use that one."
           command: |
-            echo pandora > /tmp/workspace/test-instance
+            echo pluto > /tmp/workspace/test-instance
       - run: activate-gcloud-account.sh
       - run:
           name: "Put zip in cloud storage"
