--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -252,7 +252,7 @@ jobs:
             filename="planet4-master-theme.zip"
             echo "planet4-packages/planet4-master-theme/${CIRCLE_SHA1}.zip" > /tmp/workspace/zip-path
             gs_path="gs://$(cat /tmp/workspace/zip-path)"
-            gsutil stat -q "$gs_path" || gsutil cp "/tmp/workspace/$filename" "$gs_path"
+            gsutil -q stat "$gs_path" || gsutil cp "/tmp/workspace/$filename" "$gs_path"
       - run:
           name: "Commit to test instance repo"
           command: /home/circleci/trigger_test_instance.sh planet4-master-theme
