--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "not dead"
   ],
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^5.0.0-beta2",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
     "lite-youtube-embed": "^0.1.3",
