--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@wordpress/e2e-test-utils": "^4.5.0",
     "@wordpress/scripts": "3.3.0",
     "autoprefixer": "^9.7.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^5.0.0-beta2",
     "core-js": "^3.6.5",
     "css-loader": "^3.2.0",
     "file-loader": "^6.2.0",
