--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "jquery": "^3.5.1",
+    "lite-youtube-embed": "^0.1.3",
     "popper.js": "^1.15.0"
   }
 }
