--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -256,7 +256,7 @@ jobs:
       - run:
           name: "Book instance"
           command: |
-            JIRA_USERNAME=planet4 /home/circleci/book-test-instance.py \
+            JIRA_USERNAME=planet4 book-test-instance.py \
             --pr-url $(cat /tmp/workspace/pr) \
             --results /tmp/workspace/booking.json >/tmp/workspace/test-instance
             echo "https://app.circleci.com/pipelines/github/greenpeace/planet4-test-$(cat /tmp/workspace/test-instance)/"
@@ -270,7 +270,7 @@ jobs:
             gsutil -q stat "$gs_path" || gsutil cp "/tmp/workspace/$filename" "$gs_path"
       - run:
           name: "Commit to test instance repo"
-          command: /home/circleci/trigger_test_instance.sh planet4-master-theme $(cat /tmp/workspace/is_merge_commit)
+          command: trigger_test_instance.sh planet4-master-theme $(cat /tmp/workspace/is_merge_commit)
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
