--- a/package.json
+++ b/package.json
@@ -40,10 +40,11 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "font-picker-react": "^3.5.2",
     "jest-environment-node": "^26.0.1",
     "photoswipe": "^4.1.3",
-    "font-picker-react": "^3.5.2",
     "postcss-css-variables-extract": "^0.1.2",
+    "react-color": "^2.19.3",
     "react-hotkeys-hook": "^3.0.3",
     "tinycolor2": "^1.4.2"
   }
